# mgeo

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: calculate_local_feature.py  check_camera.py  check_denoising.py  check_epipolar.py  check_homography.py  check_sift_file.py  check_triangulation.py  estimate_pose.py  gl_test.py  match_with_harris.py  test_pca.py  test_pil.py
mgeo/: __init__.py
mgeo/feature/: __init__.py  feature_matcher.py  harris.py  sift.py
mgeo/linalg/: __init__.py  pca.py
mgeo/transform/: __init__.py  basic.py  camera.py  contrast.py  homography.py  noise.py  ransac.py  sfm.py  transform2d.py  transform3d.py  warp.py
mgeo/utils/: __init__.py  gl.py  io.py  visualize.py
tests/: context.py  test_camera_geometry.py  test_linalg.py
