[tool.poetry]
name = "mgeo"
version = "0.1.0"
description = ""
authors = ["mocobt <mocobt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pillow = "6.2.0"
numpy = "^1.18.1"
matplotlib = "^3.1.3"
sklearn = "^0.0"
tqdm = "^4.43.0"
opencv-python = "^4.2.0"
PyOpenGL = "^3.1.5"
glfw = "^1.11.0"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5"
yapf = "^0.29.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
